# or_plugin

./: CMakeLists.txt  README.md  package.xml  setup.py
cmake/: or_plugin_extras.cmake.in
include/or_plugin/: module.h  yaml.h
src/: module.cpp
src/or_plugin/: __init__.py  encoding.py  json.py  module.py
tests/: example_plugin.cpp  test_plugin.py
