<?xml version="1.0"?>
<package format="2">
  <name>or_plugin</name>
  <version>0.4.0</version>
  <description>
    Utility library to simplify the implementation of OpenRAVE plugins.
  </description>
  <url type="repository">https://github.com/personalrobotics/or_plugin</url>
  <maintainer email="pkv@cs.cmu.edu">Pras Velagapudi</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <author email="psigen@cs.cmu.edu">Pras Velagapudi</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python</build_depend>
  <depend>openrave_catkin</depend>
  <depend>yaml-cpp</depend>
  <test_depend>python-nose</test_depend>
  <test_depend>python-numpy</test_depend>
  <test_depend>python</test_depend>
</package>
